# nexus

./: .gitignore  LICENSE  README.md  archive-main.py  main.py  pyproject.toml
data/raw/: caesar.txt  data.txt
src/: __init__.py  cli.py  entity_extractor.py  file_reader.py  graph_builder.py  graph_visualizer.py  text_processor.py
src/core/: __init__.py  config.py  entity_extractor.py  sentiment_analyzer.py  text_processor.py
src/graph/: __init__.py  graph_builder.py  graph_visualizer.py
src/interface/: cli.py
src/io/: __init__.py  file_reader.py
