[project]
name = "nexus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "en-core-web-trf",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=1.23.0,<2.0.0",
    "pandas>=2.3.2",
    "plotly>=5.17.0",
    "python-levenshtein>=0.27.1",
    "rapidfuzz>=3.14.1",
    "rich>=14.1.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "spacy>=3.7.2,<3.8.0",
    "thefuzz>=0.19.0",
    "transformers>=4.56.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv.sources]
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl" }
